# logtest

./: pyproject.toml
src/logtest/: main.py
src/logtest/interpreter/: environment.py  interpreter.py  primitives.py  tables.py
src/logtest/parser/: logtest_ast.py  parser.py
src/logtest/tokenizer/: token_kinds.py  tokenizer.py  tokens.py
src/peekable/: __init__.py  peekable.py
tests/logtest/: test_interpreter.py  test_parser.py  test_tokenizer.py
tests/logtest/integration/: test_interpreting.py
tests/logtest/parser/: test_parser.py
tests/logtest/tokenizer/: test_tokenizer.py
tests/logtest/unit/: test_interpreter.py  test_parser.py  test_tokenizer.py
tests/peekable/: test_peekable.py
